--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -69,7 +69,10 @@ a {
 #subject_errormsg,
 #message_errormsg,
 #quantity_errormsg {
-    color: red;
+    color: #4E0808;
     display: none;
-    
+    background-color: #fbc8c8;
+    border-radius: 5px;
+    padding: 0.4rem;
+    font-size: 16px;
 }
