Added open to about section accordion

--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -38,7 +38,8 @@ const {
              <Accordion>
                 <AccordionItem
                     title="About"
-                    variant="chevron">
+                    variant="chevron"
+                    open >
                     <div>
                         <!-- About -->
                         <p>{AboutDesc}</p>
