--- a/src/components/LinerlessLabel/WhatIs.astro
+++ b/src/components/LinerlessLabel/WhatIs.astro
@@ -23,14 +23,16 @@ import "../../styles/styles.scss";
         <p>{printedmanufactureText}</p>
     </div>
     <div class="linerless-img">
-        <Image 
-            src={linerlesslabelImage1} 
-            alt={linerlesslabelAltText1}
-            inferSize={true}/>
-        <Image 
-            src={linerlesslabelImage2} 
-            alt={linerlesslabelAltText2}
-            inferSize={true}/>
+        <div class="linerless-img-row">
+            <Image
+                src={linerlesslabelImage1}
+                alt={linerlesslabelAltText1}
+                inferSize={true}/>
+            <Image
+                src={linerlesslabelImage2}
+                alt={linerlesslabelAltText2}
+                inferSize={true}/>
+        </div>
         <Image 
             src={linerlesslabelImage3} 
             alt={linerlesslabelAltText3}
