--- a/src/styles/_featured-products.scss
+++ b/src/styles/_featured-products.scss
@@ -10,8 +10,17 @@
 .featured-products-hero {
   @include products-hero-card($tertiary-dark-blue);
   padding: 32px 16px;
-  margin-bottom: 96px;
+  margin-bottom: 6rem;
   color: $white;
+
+  img {
+    margin: 0 auto;
+  }
+
+  .product-hero-container {
+    max-width: 700px;
+    margin: 0 auto;
+  }
 }
 
 .featured-products-hero p {
@@ -27,6 +36,8 @@
 .featured-products-info {
   @include products-hero-card($white);
   margin-bottom: 1rem;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .featured-products-info h2 {
@@ -42,23 +53,35 @@
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
+  justify-content: center;
+
+  img {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .linerless-img-row {
+    display: flex;
+    gap: 16px;
+    max-width: 700px;
+  }
 }
 
 .linerless-img img,
 .pressure-seal-img img,
-.integrated-form-img img{
+.integrated-form-img img {
   border-radius: 12px;
 }
 
 
-.linerless-img img:nth-child(1),
-.linerless-img img:nth-child(2) {
-  width: 125px;
-}
+// .linerless-img img:nth-child(1),
+// .linerless-img img:nth-child(2) {
+//   width: 125px;
+// }
 
-.linerless-img img:nth-child(3) {
-  width: 288px;
-}
+// .linerless-img img:nth-child(3) {
+//   width: 288px;
+// }
 
 .pressure-seal-img img:nth-child(2) {
   border-radius: 12px;
@@ -92,6 +115,8 @@
   @include products-hero-card($tertiary-dark-blue);
   color: white;
   padding: 32px 16px 16px 16px;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .featured-products-infolist ul {
@@ -111,70 +136,137 @@
 
 .featured-products-additional-info {
   margin-bottom: 96px;
+
+  .product-container {
+    margin: 0 auto;
+  }
 }
 
 // *** MEDIA QUERY ***
 
-@media (min-width: 750px) {
-  .linerless-img img:nth-child(1),
-  .linerless-img img:nth-child(2) {
-    width: 188px;
-  }
-}
+// @media (min-width: 750px) {
+//   .linerless-img img:nth-child(1),
+//   .linerless-img img:nth-child(2) {
+//     width: 188px;
+//   }
+// }
 
 @media (min-width: 1000px) {
-  .featured-products-hero {
-    width: 950px;
-    display: flex;
-    justify-content: space-evenly;
-    padding: 4rem;
-    margin-top: 2rem;
-    margin-left: auto;
-    align-items: center
+
+  .hero-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 1920px;
+
+    .featured-products-hero {
+      grid-column: 2 / span 11;
+      gap: 20px;
+      display: grid;
+      grid-template-columns: repeat(11, 1fr);
+      margin-top: 2rem;
+      margin-bottom: 9rem;
+      align-items: center;
+      padding: unset;
+
+      .product-hero-container {
+        grid-column: 2 / span 4;
+        padding: 3rem 0;
+
+      }
+
+      .product-hero-img {
+        grid-column: 7 / span 4;
+        padding: 2rem 0;
+
+        img {
+          border-radius: 12px;
+        }
+      }
+    }
   }
 
-  .featured-products-infolist ul {
-    padding-bottom: 32px;
+  .featured-products-additional-info {
+    margin: 0 auto;
+    max-width: 1920px;
+    margin-bottom: 9rem;
+
+    .product-container {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 20px;
+      grid-column: span 12;
+      
+      .yellow-header {
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-column: 1 / span 8;
+        max-width: unset;
+        
+        h2 {
+          grid-column: 3 / span 6;
+        }
+      }
+
+      .featured-products-infolist {
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        gap: 20px;
+        grid-column: 3 / span 8;
+        max-width: unset;
+        margin: unset;
+        padding: unset;
+
+        .liner-container {
+          padding: 2rem 0;
+          grid-column: 2 / span 6;
+
+          a {
+            width: 31.5%;
+          }
+        }
+      }
+    }
   }
 
-  .product-hero-container {
-    width: 600px;
-    padding-top: 3rem;
-  }
 
   .featured-products-container {
-    display: flex;
-    gap: 50px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px;
+    margin-bottom: 9rem;
   }
 
   .featured-products-info {
-    max-width: 605px;
-    height: 100%;
+    grid-column: 3 / span 4;
     margin-top: 5rem;
     padding: 32px;
   }
 
   .linerless-img {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    gap: 20px;
+    grid-column: 7 / span 9;
+    justify-content: unset;
+  
+    // img:nth-child(1) {
+    //   width: 188px;
+    //   height: 188px;
+    //   border-radius: 12px;
+    // }
+
+    // img:nth-child(2) {
+    //   border-radius: 12px;
+    // }
+
   }
 
-  .linerless-img img:nth-child(3) {
-    max-width: 238px;
-  }
-
-  .featured-products-container {
-    padding-right: 15rem;
-  }
-
-  .featured-products-infolist {
-    width: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 50px 150px;
-  }
+  // .featured-products-infolist {
+  //   // width: 950px;
+  //   // margin-left: auto;
+  //   // margin-right: auto;
+  //   // padding: 50px 150px;
+  // }
 
   .featured-products-infolist img {
     width: 920px;
@@ -183,11 +275,8 @@
 
 
   .linerless-btn {
-    display: inline;
-  }
+    display: inline-block;
 
-  .linerless-img {
-    margin-top: 3rem
   }
 
   .featured-products-hero {
@@ -196,130 +285,135 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .linerless-img {
-    display: flex;
-    flex-direction: column;
-  }
+// @media (min-width: 1200px) {
+//   .linerless-img {
+//     display: flex;
+//     flex-direction: column;
+//   }
 
-  .featured-products-container {
-    gap: 50px;
-    padding-right: 0;
-  }
+//   .featured-products-container {
+//     gap: 50px;
+//     padding-right: 0;
+//   }
 
-  .pressure-seal-img img:nth-child(1) {
-    width: 348px;
-  }
-  .pressure-seal-img img:nth-child(2) {
-    width: 222px;
-  }
-  .pressure-seal-img img:nth-child(3) {
-    width: 230px;
-    padding-left: 0;
-  }
-  .integrated-form-img img:nth-child(1) {
-    width: 382px;
-  }
-  .integrated-form-img img:nth-child(2) {
-    width: 347px;
-  }
-  .integrated-form-img img:nth-child(3) {
-    width: 209px;
-  }
-}
+//   .pressure-seal-img img:nth-child(1) {
+//     width: 348px;
+//   }
 
-@media (min-width: 1400px) {
+//   .pressure-seal-img img:nth-child(2) {
+//     width: 222px;
+//   }
 
-  .featured-products-container {
-    padding: 48px 0;
-  }
+//   .pressure-seal-img img:nth-child(3) {
+//     width: 230px;
+//     padding-left: 0;
+//   }
 
-  .linerless-hero-img {
-    width: 600px;
-    height: 366px;
-  }
+//   .integrated-form-img img:nth-child(1) {
+//     width: 382px;
+//   }
 
-  .integratedform-hero-img {
-    width: 606px;
-    height: 366px;
-  }
+//   .integrated-form-img img:nth-child(2) {
+//     width: 347px;
+//   }
 
-  .pressureseal-hero-img {
-    width: 606px;
-    height: 356px;
-  }
+//   .integrated-form-img img:nth-child(3) {
+//     width: 209px;
+//   }
+// }
 
-  .featured-products-hero {
-    width: 1400px;
-  }
+// @media (min-width: 1400px) {
 
-  .featured-products-infolist {
-    width: 1200px;
-  }
+//   .featured-products-container {
+//     padding: 48px 0;
+//   }
 
-  .linerless-img img:nth-child(1) {
-    position: relative;
-    top: 5rem;
-  }
+//   .linerless-hero-img {
+//     width: 600px;
+//     height: 366px;
+//   }
 
-  .linerless-img img:nth-child(2) {
-    position: relative;
-    left: 14rem;
-    top: 3rem;
-  }
+//   .integratedform-hero-img {
+//     width: 606px;
+//     height: 366px;
+//   }
 
-  .yellow-header {
-    @include yellow-header-products-desktop
-  }
+//   .pressureseal-hero-img {
+//     width: 606px;
+//     height: 356px;
+//   }
 
-  .featured-products-flex {
-    display: flex;
-    justify-content: space-between;
-  }
-  .featured-products-flex img {
-    display: flex;
-    width: 450px;
-  }
-}
+//   // .featured-products-hero {
+//   //   width: 1400px;
+//   // }
 
-@media (min-width: 1600px) {
-  .featured-products-hero {
-    width: 1500;
-  }
-  .pressure-seal-img img:nth-child(1) {
-    position: relative;
-    top: 8rem;
-  }
-  .pressure-seal-img img:nth-child(2) {
-    position: relative;
-    left: 23rem;
-    bottom: 18rem;
+//   .featured-products-infolist {
+//     width: 1200px;
+//   }
 
-  }
-  .pressure-seal-img img:nth-child(3) {
-    position: relative;
-    left: 26rem;
-    bottom: 17rem;
-  }
+//   .linerless-img img:nth-child(1) {
+//     position: relative;
+//     top: 5rem;
+//   }
 
-  .integrated-form-img img:nth-child(1) {
-    position: relative;
-    top: 5rem;
-  }
-  .integrated-form-img img:nth-child(2) {
-    position: relative;
-    top: 8rem;
-    left: 10rem;
-  }
-  .integrated-form-img img:nth-child(3) {
-    position: relative;
-    bottom: 31.5rem;
-    left: 30rem;
-  }
-}
+//   .linerless-img img:nth-child(2) {
+//     position: relative;
+//     left: 14rem;
+//     top: 3rem;
+//   }
 
-@media (min-width: 1800px) {
-  .featured-products-hero {
-    width: 1800px;
-  }
-}
+//   .yellow-header {
+//     @include yellow-header-products-desktop
+//   }
+
+//   .featured-products-flex {
+//     display: flex;
+//     justify-content: space-between;
+//   }
+
+//   .featured-products-flex img {
+//     display: flex;
+//     width: 450px;
+//   }
+// }
+
+// @media (min-width: 1600px) {
+//   // .featured-products-hero {
+//   //   width: 1500;
+//   // }
+
+//   .pressure-seal-img img:nth-child(1) {
+//     position: relative;
+//     top: 8rem;
+//   }
+
+//   .pressure-seal-img img:nth-child(2) {
+//     position: relative;
+//     left: 23rem;
+//     bottom: 18rem;
+
+//   }
+
+//   .pressure-seal-img img:nth-child(3) {
+//     position: relative;
+//     left: 26rem;
+//     bottom: 17rem;
+//   }
+
+//   .integrated-form-img img:nth-child(1) {
+//     position: relative;
+//     top: 5rem;
+//   }
+
+//   .integrated-form-img img:nth-child(2) {
+//     position: relative;
+//     top: 8rem;
+//     left: 10rem;
+//   }
+
+//   .integrated-form-img img:nth-child(3) {
+//     position: relative;
+//     bottom: 31.5rem;
+//     left: 30rem;
+//   }
+// }
