Fixed linerless page styling

--- a/src/components/LinerlessLabel/Hero.astro
+++ b/src/components/LinerlessLabel/Hero.astro
@@ -3,7 +3,7 @@ const {linerlesslabelHeader, linerlesslabelText, linerlessImageMobile , linerles
 import "../../styles/styles.scss";
 ---
 
-<div class="hero-grid">
+<div class="product-hero-grid">
     <div class="featured-products-hero">
         <div class="product-hero-container">
             <h1>{linerlesslabelHeader}</h1>
