--- a/src/components/LinerlessLabel/SustainableLabel.astro
+++ b/src/components/LinerlessLabel/SustainableLabel.astro
@@ -1,13 +1,23 @@
 ---
-import { Image } from 'astro:assets';
-const {keyadvantagesTitle, nolinerText, continuousrollText, custombrandingText, excellentforText, sustainableImage, sustainableAltText, sustainableBtn, sustainableTitle} = Astro.props;
+import { Image } from "astro:assets";
+const {
+    keyadvantagesTitle,
+    nolinerText,
+    continuousrollText,
+    custombrandingText,
+    excellentforText,
+    sustainableImage,
+    sustainableAltText,
+    sustainableBtn,
+    sustainableTitle,
+} = Astro.props;
 import "../../styles/styles.scss";
 ---
 
 <div class="featured-products-additional-info">
     <div class="product-container">
         <div class="yellow-header">
-             <h2>{sustainableTitle}</h2>
+            <h2>{sustainableTitle}</h2>
         </div>
         <div class="featured-products-infolist">
             <div class="liner-container">
@@ -18,14 +28,16 @@ import "../../styles/styles.scss";
                     <li>{custombrandingText}</li>
                     <li>{excellentforText}</li>
                 </ul>
-                <a href="/request-quote" class="featured-products-btn linerless-btn">{sustainableBtn}</a>
-                <div>
-                    <Image
-                        src={sustainableImage}
-                        alt={sustainableAltText}
-                        inferSize={true}
-                        class:list="linerless-img"/>
-                </div>
+                <a
+                    href="/request-quote"
+                    class="featured-products-btn linerless-btn"
+                    >{sustainableBtn}</a
+                >
+                <Image
+                    src={sustainableImage}
+                    alt={sustainableAltText}
+                    inferSize={true}
+                />
             </div>
         </div>
     </div>
