--- a/src/styles/_featured-products.scss
+++ b/src/styles/_featured-products.scss
@@ -35,36 +35,44 @@
 // WHAT ARE... SECTION
 .featured-products-info {
   @include products-hero-card($white);
+  display: flex;
+  flex-direction: column;
   margin-bottom: 1rem;
   max-width: 700px;
   margin: 0 auto;
-}
+  gap: 1rem;
 
-.featured-products-info h2 {
-  padding-top: 16px;
-}
+  h2 {
+    padding-top: 1rem;
 
-.featured-products-info p {
-  padding: 16px 0 8px 0;
+  }
 }
 
 .linerless-img {
-  margin-top: 16px;
+  padding-top: 16px;
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
   justify-content: center;
+  max-width: 700px;
+  margin: 0 auto;
 
   img {
     width: 100%;
     max-width: 400px;
+    margin: 0 auto;
   }
+}
 
-  .linerless-img-row {
-    display: flex;
-    gap: 16px;
-    max-width: 700px;
+.liner-container {
+  img {
+    border-radius: 12px;
   }
+}
+
+.pressure-seal-img {
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .linerless-img img,
@@ -153,7 +161,7 @@
 
 @media (min-width: 1000px) {
 
-  .hero-grid {
+  .product-hero-grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
@@ -197,13 +205,13 @@
       grid-template-columns: repeat(12, 1fr);
       gap: 20px;
       grid-column: span 12;
-      
+
       .yellow-header {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
         grid-column: 1 / span 8;
         max-width: unset;
-        
+
         h2 {
           grid-column: 3 / span 6;
         }
@@ -225,6 +233,10 @@
           a {
             width: 31.5%;
           }
+
+          img {
+            width: 100%;
+          }
         }
       }
     }
@@ -236,28 +248,46 @@
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
     margin-bottom: 9rem;
+    padding: 3rem 0;
+    max-width: 1920px;
   }
 
   .featured-products-info {
-    grid-column: 3 / span 4;
-    margin-top: 5rem;
+    grid-column: 2 / span 5;
     padding: 32px;
+
+    h2 {
+      padding-top: unset;
+      font-size: 32px;
+    }
   }
 
   .linerless-img {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 20px;
-    grid-column: 7 / span 9;
-    justify-content: unset;
-  
-    // img:nth-child(1) {
-    //   width: 188px;
-    //   height: 188px;
-    //   border-radius: 12px;
-    // }
+    grid-column: 7 / span 6;
+    padding-top: unset;
+    max-width: unset;
 
-    // img:nth-child(2) {
-    //   border-radius: 12px;
-    // }
+    img {
+      max-width: unset;
+    }
+
+    img:nth-child(1) {
+      grid-column: 1 / span 2;
+    }
+
+    img:nth-child(2) {
+      grid-column: 3 / span 3;
+      margin-top: 4rem;
+    }
+
+    img:nth-child(3) {
+      grid-row: 2;
+      grid-column: 2 / span 3;
+    }
 
   }
 
@@ -267,11 +297,6 @@
   //   // margin-right: auto;
   //   // padding: 50px 150px;
   // }
-
-  .featured-products-infolist img {
-    width: 920px;
-    margin-bottom: 32px;
-  }
 
 
   .linerless-btn {
@@ -283,6 +308,38 @@
     @include products-hero-card-desktop($tertiary-dark-blue);
     padding: 32px 16px;
   }
+}
+
+@media (min-width: 1200px) {
+
+  .featured-products-info {
+    grid-column: 3 / span 4;
+  }
+
+  .linerless-img {
+
+    img:nth-child(2) {
+      grid-column: 3 / span 2;
+      margin-top: 4rem;
+    }
+
+    img:nth-child(3) {
+      grid-row: 2;
+      grid-column: 2 / span 2;
+    }
+
+  }
+}
+
+
+@media (min-width: 1600px) {
+  .featured-products-info {
+    h2 {
+      font-size: 48px;
+    }
+  }
+
+
 }
 
 // @media (min-width: 1200px) {
