--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -133,7 +133,7 @@ option{
     margin: 1px  0 1px 0;
 }
 .submit-btn {
-  @include btn ($white, $tertiary-dark-blue, #FFEDAD);
+  @include btn ($white, $tertiary-dark-blue, #A0D3FF);
   display: inline-block;
   margin-top: 1rem;
   width: 100%;
