--- a/src/components/LinerlessLabel/Hero.astro
+++ b/src/components/LinerlessLabel/Hero.astro
@@ -4,6 +4,7 @@ import "../../styles/styles.scss";
 ---
 
 <div class="product-hero-grid">
+    <a href="/products"><img src="/assets/arrow-left.svg" alt="">Back to Products</a>
     <div class="featured-products-hero">
         <div class="product-hero-container">
             <h1>{linerlesslabelHeader}</h1>
