--- a/src/components/LinerlessLabel/SustainableLabel.astro
+++ b/src/components/LinerlessLabel/SustainableLabel.astro
@@ -20,7 +20,7 @@ import "../../styles/styles.scss";
             <h2>{sustainableTitle}</h2>
         </div>
         <div class="featured-products-infolist">
-            <div class="liner-container">
+            <div class="inner-container">
                 <p>{keyadvantagesTitle}</p>
                 <ul>
                     <li>{nolinerText}</li>
