--- a/src/components/PressureSeal/Hero.astro
+++ b/src/components/PressureSeal/Hero.astro
@@ -1,18 +1,36 @@
 ---
-const {pressuresealHeader, pressuresealDesc, pressuresealImageMobile, pressuresealAltTextMobile, pressuresealImageDesktop} = Astro.props;
+const {
+    pressuresealHeader,
+    pressuresealDesc,
+    pressuresealImageMobile,
+    pressuresealAltTextMobile,
+    pressuresealImageDesktop,
+} = Astro.props;
 import "../../styles/styles.scss";
 ---
 
-<div class="featured-products-hero">
-    <div class="product-hero-container">
-        <h1>{pressuresealHeader}</h1>
-        <p>{pressuresealDesc}</p>
-    </div>
-    <div class="product-hero-img">
-        <!-- <img src={pressuresealImage} alt={pressuresealAltText}> -->
-        <picture>
-            <source  media="(min-width: 1400px)" srcset={pressuresealImageDesktop}>
-            <img class="pressureseal-hero-img" src={pressuresealImageMobile} alt={pressuresealAltTextMobile}>
-        </picture>
+<div class="product-hero-grid">
+    <a href="/products"
+        ><img src="/assets/arrow-left.svg" alt="" />Back to Products</a
+    >
+    <div class="featured-products-hero">
+        <div class="product-hero-container">
+            <h1>{pressuresealHeader}</h1>
+            <p>{pressuresealDesc}</p>
+        </div>
+        <div class="product-hero-img">
+            <!-- <img src={pressuresealImage} alt={pressuresealAltText}> -->
+            <picture>
+                <source
+                    media="(min-width: 1400px)"
+                    srcset={pressuresealImageDesktop}
+                />
+                <img
+                    class="pressureseal-hero-img"
+                    src={pressuresealImageMobile}
+                    alt={pressuresealAltTextMobile}
+                />
+            </picture>
+        </div>
     </div>
 </div>
