--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -41,7 +41,7 @@
 
 @mixin yellow-header-products {
     background-color: $secondary-yellow ;
-    padding: 1rem 1rem 1rem 2rem;
+    padding: 27px 1rem 27px 2rem;
     border-radius: 15px;
     position: relative;
     z-index: 1;
