--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -69,6 +69,9 @@
     margin-top: -2rem;
     margin-bottom: 96px;
 
+    p {
+        padding-top: 1rem;
+    }
   
     div{
         margin-bottom: 1rem;
@@ -77,7 +80,7 @@
     select{
         width: 100%;
         height: 55px;
-        border-radius: 4px;
+        border-radius: 5px;
         margin-bottom: 0.5rem;
     }
 }
@@ -160,7 +163,7 @@ option{
         
     }
     .form-h1 h1{
-        grid-column: 3/ span 6;
+        grid-column: 3/ span 10;
         padding-left: 0;
         
     }
@@ -195,7 +198,10 @@ option{
         margin-top: 2rem;
         box-shadow: none;
         width: 500px;
-        
+
+        p {
+            padding-top: unset;
+        }
     }
 
     .product-type-quantity{
@@ -214,7 +220,7 @@ option{
 @media (min-width: 1200px) {
 
     .forms-page-wrapper{
-        margin: 144px 0 144px 0;
+        margin: 4rem 0;
     }
 
     .contact-info-card{
@@ -225,7 +231,7 @@ option{
         left: 0;
     }
     .form-h1 h1{
-        grid-column: 6/ span 6;
+        grid-column: 6/ span 7;
         
     }
     .contact-card{
