--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -126,6 +126,67 @@ const {
 
 
 <script>
-    import { requestQuoteFormValidation } from "../../lib/formValidation";
-    requestQuoteFormValidation();
+  import { actions } from 'astro:actions';
+
+  const form = document.querySelector('form');
+
+  form?.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const nameErrorMsg = form.querySelector('#name_errormsg');
+    const phoneErrorMsg = form.querySelector('#phone_errormsg');
+    const emailErrorMsg = form.querySelector('#email_errormsg');
+    const productTypeErrorMsg = form.querySelector('#subject_errormsg');
+    const quantityErrorMsg = form.querySelector('#quantity_errormsg');
+    const messageErrorMsg = form.querySelector('#message_errormsg');
+
+    const formData = new FormData(form);
+    const emailValue = formData.get('email')?.toString() || '';
+
+    const { error } = await actions.submitRequestQuote(formData);
+    console.log(error);
+    let hasErrors = false;
+    if (error && error.fields) {
+    hasErrors = true;
+    // Name
+    nameErrorMsg.innerHTML = error.fields.name?.[0] || '';
+    nameErrorMsg.style.display = nameErrorMsg.innerHTML ? 'inline' : 'none';
+
+    // Phone
+    phoneErrorMsg.innerHTML = error.fields.phone?.[0] || '';
+    phoneErrorMsg.style.display = phoneErrorMsg.innerHTML ? 'inline' : 'none';
+
+    // Message
+    messageErrorMsg.innerHTML = error.fields.message?.[0] || '';
+    messageErrorMsg.style.display = messageErrorMsg.innerHTML ? 'inline' : 'none';
+
+    //Product Type
+    productTypeErrorMsg.innerHTML = error.fields.product_type?.[0] || '';
+    productTypeErrorMsg.style.display = productTypeErrorMsg.innerHTML ? 'inline' : 'none';
+
+    //Quantity
+    quantityErrorMsg.innerHTML = error.fields.quantity?.[0] || '';
+    quantityErrorMsg.style.display = quantityErrorMsg.innerHTML ? 'inline' : 'none';
+
+
+      if (emailValue.trim() !== '') {
+        emailErrorMsg.innerHTML = error.fields.email?.[0] || '';
+        emailErrorMsg.style.display = emailErrorMsg.innerHTML ? 'inline' : 'none';
+      } else {
+        emailErrorMsg.innerHTML = '';
+        emailErrorMsg.style.display = 'none';
+      }
+    } else {
+      // Hide all errors if no errors exist
+      [nameErrorMsg, phoneErrorMsg, emailErrorMsg, productTypeErrorMsg, quantityErrorMsg, messageErrorMsg].forEach(
+        (er) => {
+          er.innerHTML = '';
+          er.style.display = 'none';
+        }
+      );
+    }
+    if (!hasErrors) {
+        form.submit();
+    }
+  });
 </script>
