Deleted unused comments

--- a/src/components/HomePage/HighQuality.astro
+++ b/src/components/HomePage/HighQuality.astro
@@ -5,7 +5,7 @@ const {highQualityHeader, highQualityImage, highQualityText, highQualityAltText,
 
 <section class="high-quality-section container">
     <div class="quality-container">
-        <img src={highQualityImage} alt={highQualityAltText}>
+        <Image src={highQualityImage} alt={highQualityAltText} inferSize={true}/>
         <div class="high-quality-card">
             <h2>{highQualityHeader}</h2>
             <p>{highQualityText}</p>
