--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -11,18 +11,15 @@ const {
 ---
 
 <div class="form-card">
-    <!-- Add https://formsubmit.co/email-here later in the action -->
      <div class="form-p">
         <p>Input fields that are marked with <span class="form-symbol">*</span> are required. </p>
      </div>
     <form
-        action= "#"
+        action= "https://formsubmit.co/info@printedonline.ca"
         method="post"
         name="contactus"
     >
-    <!-- Template types -->
     <input type="hidden" name="_template" value="table">
-    <!-- <input type="hidden" name="_template" value="box"> -->
         <div>
             <label for={FullName}>{FullName} <span class="form-symbol">*</span></label>
             <input
