--- a/src/components/HomePage/Hero.astro
+++ b/src/components/HomePage/Hero.astro
@@ -20,8 +20,7 @@ import "../../styles/styles.scss";
 
 <section class="hero-section">
     <div class="video-container">
-        <video playsinline muted loop> 
-            <!-- add autoplay -->
+        <video playsinline muted loop autoplay>
             <source src={heroBanner} type="video/mp4" title={heroAltText} />
         </video>
     </div>
