Pointer to load more products

--- a/src/components/Products/PromoProducts.astro
+++ b/src/components/Products/PromoProducts.astro
@@ -7,7 +7,7 @@ const {featuredpromoTitle, featuredpromoBtn, featuredpromoText, featuredpromoIma
     <div>
         <h2>{featuredpromoTitle}</h2>
         <p>{featuredpromoText}</p>
-        <a href="#" class="promo-btn">{featuredpromoBtn}</a>
+        <a href="https://printedonline.espwebsite.com/" class="promo-btn" target="_blank">{featuredpromoBtn}</a>
     </div>
         <div>
             <Image
